2015-07-14  Gerrit Holl  <g.holl@reading.ac.uk>

	* pyatmlab-0-0-89

	* pyatmlab/constants.py: Add micro=1e-6

	* pyatmlab/datasets.tovs(HIRS*): Add satellites

	* pyatmlab/physics.py(specrad_frequency_to_planck_bt): Bugfix

2015-07-13  Gerrit Holl  <g.holl@reading.ac.uk>

	* pyatmlab-0-0-88

	* pyatmlab/datasets/tovs.py(IASI._read):

	- Be more verbose with DEBUG logging

	* pyatmlab/physics.py:
	
	- Moved constants out of 'c.' module again, to aid numexpr.

	(specrad_frequency_to_brightness_temperature):

	- Severe speedup using numexpr.  For a single IASI granule (145,190,760
	radiances), wall time to run this on a JASMIN node is reduced from 25
	seconds to 2 seconds.

	(spectral_to_channel_bt):

	- Similar speedup as above, but rather from ~2 seconds to ~0.2
	seconds.  As this may need to be run for each channel the total
	speedup is similar.

2015-07-10  Gerrit Holl  <g.holl@reading.ac.uk>

	* pyatmlab-0-0-87

	* pyatmlab/physics.py(specrad_to_channel_bt):

	- Added function to calculate channel BT from spectral radiances

2015-07-09  Gerrit Holl  <g.holl@reading.ac.uk>

	* pyatmlab-0-0-86

	* pyatmlab/config.py:

	- Use extended interpolation

	- Always load configuration

	* pyatmlab/constants.py:

	- Add centi

	* pyatmlab/dataset.py:

	(Dataset.setlocal()):

	- In this method, called from __init__(), go through configuration
	file and set attributes from it.  This will be used for any localised
	settings such as basedir, subdir, etc.

	(Hyperspectral):

	- New mixin class for any hyperspectral instrument, such as IASI.

	* pyatmlab/dataset/tovs.py:

	(IASI):

	- Added class with reader for IASI data

	* pyatmlab/physics.py:

	(wavelength2wavenumber): Added

	(wavenumber2wavelength): Added

	(specrad_wavenumber2frequency): Added

	(specrad_frequency_to_planck_bt): Added

2015-07-07  Gerrit Holl  <g.holl@reading.ac.uk>
	
	* pyatmlab-0-0-85

	* pyatmlab/io.py(read_arts_srf):

	- Added small function to read SRF from ARTS XML format.  Eventually